<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_tarefa"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSalvarEdicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp" />
</LinearLayout>
